# djkit

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  conf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
commonkit/: utils.py
commonkit/django/: models.py
commonkit/django/db/: fields.py
commonkit/private/: utils.py
commonkit/rest_framework/: renderers.py  serializers.py  viewsets.py
commonkit/rest_framework/pandas/: __init__.py
commonkit/rest_framework/polars/: __init__.py
django_rest_commons/: __init__.py  mixins.py  serializers.py  utils.py  viewsets.py
djkit/dataclasses/: misc.py
djkit/db/: __init__.py  fields.py
djkit/private/: errors.py  loggers.py
djkit/rest_framework/: renderers.py  serializers.py
djkit/rest_framework/pandas/: __init__.py
drf_common/: __init__.py  mixins.py  serializers.py  viewsets.py
example/: manage.py
example/core/: admin.py  models.py  serializers.py  urls.py  views.py
example/core/migrations/: 0001_initial.py
example/example/: settings.py  urls.py
source/: conf.py  drf_common.rst  index.rst  modules.rst
tests/: conftest.py
tests/rest_framework/serializers/: test_enum_serializer.py  test_errors_renderer.py  test_recursive_serializer.py  test_table_upload_field.py
