[tool.poetry]
name = "commonkit"
version = "1.0.8"
description = "A library for handling common stuff in Python"
authors = ["leondaz <ahmeddark369@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "commonkit" }]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
django = "^4.2.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"
black = "^23.11.0"
isort = "^5.12.0"
sphinx = "^7.2.6"
polars = "^0.19.19"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
xlsxwriter = "^3.1.9"
lxml = "^4.9.3"
faker = "^20.1.0"
openpyxl = "^3.1.2"
xlsx2csv = "^0.8.1"
build = "^1.0.3"
twine = "^4.0.2"
pre-commit = "^3.6.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example.settings"
pythonpath = [
    "./example",
    "./commonkit",
    "./tests",
]
testpaths = [
    "./tests",
]
